lints.workspace = true

[package]
name = "gix-actor"
version = "0.33.2"
description = "A way to identify git actors"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
include = ["src/**/*", "LICENSE-*"]
rust-version.workspace = true

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "gix-date/serde"]

[dependencies]
gix-date = { version = "^0.9.2", path = "../gix-date" }
gix-utils = { version = "^0.1.14", path = "../gix-utils" }

thiserror = "2.0.0"
bstr = { version = "1.3.0", default-features = false, features = [
    "std",
    "unicode",
] }
winnow = { version = "0.6", features = ["simd"] }
itoa = "1.0.1"
serde = { version = "1.0.114", optional = true, default-features = false, features = [
    "derive",
] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"
gix-testtools = { path = "../tests/tools" }
gix-hash = { path = "../gix-hash" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
