lints.workspace = true

[package]
name = "gix-attributes"
version = "0.24.0"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project dealing .gitattributes files"
authors.workspace = true
edition.workspace = true
include = ["src/**/*", "LICENSE-*"]
rust-version.workspace = true

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "gix-glob/serde", "kstring/serde"]

[dependencies]
gix-path = { version = "^0.10.14", path = "../gix-path" }
gix-quote = { version = "^0.4.15", path = "../gix-quote" }
gix-glob = { version = "^0.18.0", path = "../gix-glob" }
gix-trace = { version = "^0.1.12", path = "../gix-trace" }

bstr = { version = "1.3.0", default-features = false, features = ["std", "unicode"] }
smallvec = "1.10.0"
kstring = "2.0.0"
unicode-bom = { version = "2.0.3" }
thiserror = "2.0.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-fs = { path = "../gix-fs" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
