lints.workspace = true

[package]
name = "gix-bitmap"
version = "0.2.14"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project dedicated implementing the standard git bitmap format"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = ["CHANGELOG.md"]

[lib]
doctest = false
test = true

[dependencies]
thiserror = "2.0.0"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
