lints.workspace = true

[package]
name = "gix-chunk"
version = "0.4.11"
description = "Interact with the git chunk file format used in multi-pack index and commit-graph files"
authors.workspace = true
repository.workspace = true
documentation = "https://github.com/git/git/blob/seen/Documentation/technical/chunk-format.txt"
license.workspace = true
edition.workspace = true
include = ["src/**/*", "LICENSE-*"]
rust-version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
thiserror = "2.0.0"
