lints.workspace = true

[package]
name = "gix-config-value"
version = "0.14.11"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project providing git-config value parsing"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde"]

[dependencies]
gix-path = { version = "^0.10.14", path = "../gix-path" }

thiserror = "2.0.0"
bstr = { version = "1.0.1", default-features = false, features = ["std"] }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
bitflags = "2"

document-features = { version = "0.2.0", optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
