lints.workspace = true

[package]
name = "gix-date"
version = "0.9.3"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project parsing dates the way git does"
authors.workspace = true
edition.workspace = true
include = ["src/**/*", "LICENSE-*"]
rust-version.workspace = true

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde"]

[dependencies]
bstr = { version = "1.3.0", default-features = false, features = ["std"] }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
itoa = "1.0.1"
jiff = "0.1.1"
thiserror = "2.0.0"

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-hash = { path = "../gix-hash" }
gix-testtools = { path = "../tests/tools" }
once_cell = "1.12.0"
pretty_assertions = "1.4.1"

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
