lints.workspace = true

[package]
name = "gix-dir"
version = "0.12.0"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project dealing with directory walks"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
gix-trace = { version = "^0.1.12", path = "../gix-trace" }
gix-index = { version = "^0.38.0", path = "../gix-index" }
gix-discover = { version = "^0.38.0", path = "../gix-discover" }
gix-fs = { version = "^0.13.0", path = "../gix-fs" }
gix-path = { version = "^0.10.14", path = "../gix-path" }
gix-pathspec = { version = "^0.9.0", path = "../gix-pathspec" }
gix-worktree = { version = "^0.39.0", path = "../gix-worktree", default-features = false }
gix-object = { version = "^0.47.0", path = "../gix-object" }
gix-ignore = { version = "^0.13.0", path = "../gix-ignore" }
gix-utils = { version = "^0.1.14", path = "../gix-utils", features = ["bstr"] }

bstr = { version = "1.5.0", default-features = false }
thiserror = "2.0.0"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-fs = { path = "../gix-fs" }
pretty_assertions = "1.4.0"
