lints.workspace = true

[package]
name = "gix-discover"
version = "0.38.0"
repository.workspace = true
license.workspace = true
description = "Discover git repositories and check if a directory is a git repository"
authors.workspace = true
edition.workspace = true
include = ["src/**/*", "LICENSE-*"]
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
gix-sec = { version = "^0.10.11", path = "../gix-sec" }
gix-path = { version = "^0.10.14", path = "../gix-path" }
gix-ref = { version = "^0.50.0", path = "../gix-ref" }
gix-hash = { version = "^0.16.0", path = "../gix-hash" }
gix-fs = { version = "^0.13.0", path = "../gix-fs" }

bstr = { version = "1.3.0", default-features = false, features = ["std", "unicode"] }
thiserror = "2.0.0"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.3"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
serial_test = { version = "3.1.0", default-features = false }
is_ci = "1.1.1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
defer = "0.2.1"

[target.'cfg(any(unix, windows))'.dev-dependencies]
tempfile = "3.2.0"
