lints.workspace = true

[package]
name = "gix-fetchhead"
version = "0.0.0"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project to read and write .git/FETCH_HEAD"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
