lints.workspace = true

[package]
name = "gix-filter"
version = "0.17.0"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project implementing git filters"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false

[dependencies]
gix-hash = { version = "^0.16.0", path = "../gix-hash" }
gix-trace = { version = "^0.1.12", path = "../gix-trace" }
gix-object = { version = "^0.47.0", path = "../gix-object" }
gix-command = { version = "^0.4.1", path = "../gix-command" }
gix-quote = { version = "^0.4.15", path = "../gix-quote" }
gix-utils = { version = "^0.1.14", path = "../gix-utils" }
gix-path = { version = "^0.10.14", path = "../gix-path" }
gix-packetline = { package = "gix-packetline-blocking", version = "^0.18.2", path = "../gix-packetline-blocking" }
gix-attributes = { version = "^0.24.0", path = "../gix-attributes" }

encoding_rs = "0.8.32"
bstr = { version = "1.5.0", default-features = false, features = ["std"] }
thiserror = "2.0.0"
smallvec = "1.10.0"


[dev-dependencies]
serial_test = { version = "3.1.0", default-features = false }
gix-testtools = { path = "../tests/tools" }
gix-worktree = { path = "../gix-worktree", default-features = false, features = ["attributes"] }
