lints.workspace = true

[package]
name = "gix-fsck"
version = "0.9.0"
repository.workspace = true
authors = ["Cameron Esfahani <cesfahani@gmail.com>", "Sebastian Thiel <sebastian.thiel@icloud.com>"]
license.workspace = true
description = "Verifies the connectivity and validity of objects in the database"
edition.workspace = true
include = ["src/**/*", "LICENSE-*"]
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
gix-hash = { version = "^0.16.0", path = "../gix-hash" }
gix-hashtable = { version = "^0.7.0", path = "../gix-hashtable" }
gix-object = { version = "^0.47.0", path = "../gix-object" }

[dev-dependencies]
gix-odb = { path = "../gix-odb" }
gix-testtools = { path = "../tests/tools" }
