lints.workspace = true

[package]
name = "gix-glob"
version = "0.18.0"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project dealing with pattern matching"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "bitflags/serde"]

[dependencies]
gix-path = { version = "^0.10.14", path = "../gix-path" }
gix-features = { version = "^0.40.0", path = "../gix-features" }
bstr = { version = "1.3.0", default-features = false, features = ["std"] }
bitflags = "2"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
