lints.workspace = true

[package]
name = "gix-hashtable"
version = "0.7.0"
repository.workspace = true
license.workspace = true
description = "A crate that provides hashtable based data structures optimized to utilize ObjectId keys"
authors = ["Pascal Kuthe <pascal.kuthe@semimod.de>"]
edition.workspace = true
include = ["src/**/*", "LICENSE-*"]
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
parking_lot = "0.12.1"
hashbrown = { version = "0.14.0", default-features = false, features = [
    "inline-more",
    "raw"
] }
gix-hash = { version = "^0.16.0", path = "../gix-hash" }
