lints.workspace = true

[package]
name = "gix-lfs"
version = "0.0.0"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project dealing with handling git large file support"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
