lints.workspace = true

[package]
name = "gix-lock"
version = "16.0.0"
repository.workspace = true
license.workspace = true
description = "A git-style lock-file implementation"
authors.workspace = true
edition.workspace = true
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version.workspace = true

[lib]
doctest = false
test = true

[dependencies]
gix-utils = { version = "^0.1.14", default-features = false, path = "../gix-utils" }
gix-tempfile = { version = "^16.0.0", default-features = false, path = "../gix-tempfile" }
thiserror = "2.0.0"

[dev-dependencies]
tempfile = "3.2.0"
