lints.workspace = true

[package]
name = "gix-macros"
version = "0.1.5"
edition.workspace = true
description = "Proc-macro utilities for gix"
authors = [
    "Jiahao XU <Jiahao_XU@outlook.com>",
    "Andre Bogus <bogusandre@gmail.com>",
    "Sebastian Thiel <sebastian.thiel@icloud.com>",
]
repository.workspace = true
license.workspace = true
include = ["src/**/*", "LICENSE-*"]
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
