lints.workspace = true

[package]
name = "gix-mailmap"
version = "0.25.2"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project for parsing mailmap files"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "gix-actor/serde"]

[dependencies]
gix-actor = { version = "^0.33.2", path = "../gix-actor" }
gix-date = { version = "^0.9.2", path = "../gix-date" }
bstr = { version = "1.3.0", default-features = false, features = ["std", "unicode"] }
thiserror = "2.0.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
