lints.workspace = true

[package]
name = "gix-negotiate"
version = "0.18.0"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project implementing negotiation algorithms"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false
test = false

[dependencies]
gix-hash = { version = "^0.16.0", path = "../gix-hash" }
gix-object = { version = "^0.47.0", path = "../gix-object" }
gix-date = { version = "^0.9.2", path = "../gix-date" }
gix-commitgraph = { version = "^0.26.0", path = "../gix-commitgraph" }
gix-revwalk = { version = "^0.18.0", path = "../gix-revwalk" }
thiserror = "2.0.0"
smallvec = "1.10.0"
bitflags = "2"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-odb = { path = "../gix-odb" }
gix-ref = { path = "../gix-ref" }
