lints.workspace = true

[package]
name = "gix-pathspec"
version = "0.9.0"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project dealing magical pathspecs"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
include = ["src/**/*", "LICENSE-*", "README.md"]

[lib]
doctest = false

[dependencies]
gix-glob = { version = "^0.18.0", path = "../gix-glob" }
gix-path = { version = "^0.10.14", path = "../gix-path" }
gix-attributes = { version = "^0.24.0", path = "../gix-attributes" }
gix-config-value = { version = "^0.14.11", path = "../gix-config-value" }

bstr = { version = "1.3.0", default-features = false, features = ["std"] }
bitflags = "2"
thiserror = "2.0.0"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
once_cell = "1.12.0"
serial_test = "3.1.1"
