lints.workspace = true

[package]
name = "gix-prompt"
version = "0.9.1"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project for handling prompts in the terminal"
authors.workspace = true
edition.workspace = true
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
gix-command = { version = "^0.4.1", path = "../gix-command" }
gix-config-value = { version = "^0.14.11", path = "../gix-config-value" }

thiserror = "2.0.0"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.4", features = ["termios"] }
parking_lot = "0.12.1"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
serial_test = { version = "3.1.0", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "macos"))'.dev-dependencies]
expectrl = "0.7.0"
