lints.workspace = true

[package]
name = "gix-quote"
version = "0.4.15"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project dealing with various quotations used by git"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false

[dependencies]
gix-utils = { version = "^0.1.14", path = "../gix-utils" }

bstr = { version = "1.3.0", default-features = false, features = ["std"] }
thiserror = "2.0.0"
