lints.workspace = true

[package]
name = "gix-rebase"
version = "0.0.0"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project dealing rebases"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
