lints.workspace = true

[package]
name = "gix-ref"
version = "0.50.0"
repository.workspace = true
license.workspace = true
description = "A crate to handle git references"
authors.workspace = true
edition.workspace = true
include = ["src/**/*", "LICENSE-*"]
rust-version.workspace = true
autotests = false

[lib]
doctest = false
test = true

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "gix-hash/serde", "gix-actor/serde", "gix-object/serde"]

[dependencies]
gix-features = { version = "^0.40.0", path = "../gix-features", features = ["walkdir"] }
gix-fs = { version = "^0.13.0", path = "../gix-fs" }
gix-path = { version = "^0.10.14", path = "../gix-path" }
gix-hash = { version = "^0.16.0", path = "../gix-hash" }
gix-object = { version = "^0.47.0", path = "../gix-object" }
gix-utils = { version = "^0.1.14", path = "../gix-utils" }
gix-validate = { version = "^0.9.3", path = "../gix-validate" }
gix-actor = { version = "^0.33.2", path = "../gix-actor" }
gix-lock = { version = "^16.0.0", path = "../gix-lock" }
gix-tempfile = { version = "^16.0.0", default-features = false, path = "../gix-tempfile" }

thiserror = "2.0.0"
winnow = { version = "0.6", features = ["simd"] }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

# packed refs
memmap2 = "0.9.0"

document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-date = { path = "../gix-date" }

[package.metadata.docs.rs]
features = ["document-features", "serde"]
