lints.workspace = true

[package]
name = "gix-refspec"
version = "0.28.0"
repository.workspace = true
license.workspace = true
description = "A crate of the gitoxide project for parsing and representing refspecs"
authors.workspace = true
edition.workspace = true
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
gix-revision = { version = "^0.32.0", path = "../gix-revision", default-features = false }
gix-validate = { version = "^0.9.3", path = "../gix-validate" }
gix-hash = { version = "^0.16.0", path = "../gix-hash" }

bstr = { version = "1.3.0", default-features = false, features = ["std"] }
thiserror = "2.0.0"
smallvec = "1.9.0"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
