lints.workspace = true

[package]
name = "gix-revwalk"
version = "0.18.0"
repository.workspace = true
license.workspace = true
description = "A crate providing utilities for walking the revision graph"
authors.workspace = true
edition.workspace = true
include = ["src/**/*", "LICENSE-*"]
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
gix-hash = { version = "^0.16.0", path = "../gix-hash" }
gix-object = { version = "^0.47.0", path = "../gix-object" }
gix-date = { version = "^0.9.2", path = "../gix-date" }
gix-hashtable = { version = "^0.7.0", path = "../gix-hashtable" }
gix-commitgraph = { version = "^0.26.0", path = "../gix-commitgraph" }

thiserror = "2.0.0"
smallvec = "1.10.0"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
