lints.workspace = true

[package]
name = "gix-shallow"
version = "0.2.0"
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "Handle files specifying the shallow boundary"
edition.workspace = true
include = ["src/**/*", "LICENSE-*"]
rust-version.workspace = true

[lib]
doctest = false
test = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "gix-hash/serde"]

[dependencies]
gix-hash = { version = "^0.16.0", path = "../gix-hash" }
gix-lock = { version = "^16.0.0", path = "../gix-lock" }

thiserror = "2.0.0"
bstr = { version = "1.5.0", default-features = false }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["std", "derive"] }
